# novelconverter-python

./: .gitignore  LICENSE  NovelConv.py  README.md  pyproject.toml  setup.py
.test/: test.txt
NovelConverter/: __init__.py  __main__.py  cli.py
NovelConverter/form/: ddmarkdown.py  markdown.py  pixiv.py  plain.py
module/: __init__.py  base.py  conv.py  convert.py  ddmarkdown.py  default.py  form.py  getData.py  markdown.py  pixiv.py
novelconverter/: __init__.py  __meta__.py  cli.py  core.py  lexer.py  parser.py  processor.py  renderer.py  tree.py  util.py
novelconverter/extension/: __init__.py  ddmarkdown.py  markdown.py  pixiv.py
novelconverter/form/: ddmarkdown.py  markdown.py  pixiv.py  plain.py
test/: test_ext_ddmarkdown.py  test_ext_markdown.py  test_ext_pixiv.py  test_parser.py  test_processor.py  test_renderer.py
tests/: __init__.py  test_export.py  test_lexer.py  test_parser.py  test_processor.py  test_renderer.py  test_tree.py  test_util.py
tests/data/: test.txt
tests/data/ddmarkdown/: ddmarkdown.txt  to_markdown.txt  to_pixiv.txt  to_plain.txt
tests/data/markdown/: markdown.txt  to_ddmarkdown.txt  to_pixiv.txt  to_plain.txt
tests/data/pixiv/: pixiv.txt  to_ddmarkdown.txt  to_markdown.txt  to_plain.txt
