[tool.poetry]
name = "novelconverter"
version = "5.0.0.dev0"
description = "Convert syntax for Web-Novel sites."
readme = "README.md"
authors = ["Ray Shirohara <RShirohara@gmail.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
flake8-black = "*"
mypy = "*"
pytest = "*"

[tool.poetry.scripts]
novelconv = 'novelconv.cli:main'

[tool.black]
line-length = 80
