[tool.poetry]
name = "novelconverter"
version = "5.0.0.dev0"
description = "Convert syntax for Web-Novel sites."
license = "MIT"
authors = ["Ray Shirohara <RShirohara@gmail.com>"]
readme = "README.md"
repository = "https://github.com/RShirohara/novelconverter-python"
classifiers = ["Topic :: Text Processing"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylint = "^2.15.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.black]
line-length = 88

[tool.pylint.Format]
max-line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--cov=novelconverter", "--cov-report=xml", "--cov-report=term"]
